행맨 프로세스 수정,,,및 테스트(아직,,,부족하네 ㅠㅠ)

--- a/day6/sub/Mini_Project_Hangman.ipynb
+++ b/day6/sub/Mini_Project_Hangman.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -102,275 +102,87 @@
       "Hangman Game에 오신 것을 환영합니다.\n",
       "단어를 맞추시면 됩니다.\n",
       "(10번 안에 못 맞추시면 죽습니다.)\n",
-      "_ _ _ _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "------     \n",
+      "_ _ _ _ _\n",
       "\n",
-      "단어를 맞추셨군요. 더 힘내봐요\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
+      "     ------\n",
+      "     |    |\n",
+      "     |\n",
+      "     |\n",
+      "     |\n",
+      "     |\n",
+      "    ---\n",
       "틀렸습니다. 남은 시도 횟수: 9\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
+      "_ _ _ _ _\n",
       "\n",
+      "     ------\n",
+      "     |    |\n",
+      "     |    O\n",
+      "     |\n",
+      "     |\n",
+      "     |\n",
+      "    ---\n",
       "틀렸습니다. 남은 시도 횟수: 8\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
+      "_ _ _ _ _\n",
       "\n",
-      "단어를 맞추셨군요. 더 힘내봐요\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: \n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: \n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: \n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|    |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
+      "     ------\n",
+      "     |    |\n",
+      "     |    O\n",
+      "     |    |\n",
+      "     |\n",
+      "     |\n",
+      "    ---\n",
       "틀렸습니다. 남은 시도 횟수: 7\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|/   |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
+      "_ _ _ _ _\n",
       "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|/   |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
+      "     ------\n",
+      "     |    |\n",
+      "     |    O\n",
+      "     |   /|\n",
+      "     |\n",
+      "     |\n",
+      "    ---\n",
+      "단어를 맞추셨군요. 더 힘내봐요\n",
+      "l _ _ _ _\n",
       "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|/   |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
+      "     ------\n",
+      "     |    |\n",
+      "     |    O\n",
+      "     |   /|\n",
+      "     |\n",
+      "     |\n",
+      "    ---\n",
+      "단어를 맞추셨군요. 더 힘내봐요\n",
+      "l e _ _ _\n",
       "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|/   |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
+      "     ------\n",
+      "     |    |\n",
+      "     |    O\n",
+      "     |   /|\n",
+      "     |\n",
+      "     |\n",
+      "    ---\n",
+      "단어를 맞추셨군요. 더 힘내봐요\n",
+      "l e m _ _\n",
       "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|/   |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
+      "     ------\n",
+      "     |    |\n",
+      "     |    O\n",
+      "     |   /|\n",
+      "     |\n",
+      "     |\n",
+      "    ---\n",
+      "단어를 맞추셨군요. 더 힘내봐요\n",
+      "l e m o _\n",
       "\n",
-      "이미 입력한 알파벳입니다: aa\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|/   |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|/   |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|/   |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|/   |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|/   |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n",
-      "이미 입력한 알파벳입니다: a\n",
-      "_ _ a _ _ _\n",
-      "---    \n",
-      "|     \n",
-      "|     \n",
-      "|/   |     \n",
-      "O    |     \n",
-      "|    |     \n",
-      "------     \n",
-      "\n"
+      "     ------\n",
+      "     |    |\n",
+      "     |    O\n",
+      "     |   /|\n",
+      "     |\n",
+      "     |\n",
+      "    ---\n",
+      "단어를 맞추셨군요. 더 힘내봐요\n",
+      "축하합니다! 단어를 맞추셨습니다. 시도 횟수: 3\n"
      ]
     }
    ],
@@ -507,7 +319,7 @@
     "\n",
     "            # 단어를 다 맞혔으면 게임 종료\n",
     "            if \"_\" not in self.display_word:  # 모든 글자를 맞췄으면\n",
-    "                print(f\"축하합니다! 단어를 맞추셨습니다. 남은 시도 횟수: {self.max_attempts - self.attempts}\")\n",
+    "                print(f\"축하합니다! 단어를 맞추셨습니다. 시도 횟수: {self.attempts}\")\n",
     "                break\n",
     "        else:\n",
     "            # 시도 횟수 초과 시\n",
