🌱 9번 문제 풀고, 제출
__init__ 모듈을 왜 추가하는지 이해를 못했습니다...

--- a/day7/task_9.ipynb
+++ b/day7/task_9.ipynb
@@ -20,14 +20,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "독수리이(가) 날라다닙니다. 날개 길이는 2.3m 입니다.\n",
+      "바우 (골든 리트리버)이(가) 멍멍 짖습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from animals import birds, mammals\n",
+    "\n",
+    "def birds_info():\n",
+    "    my_eagle = birds.Eagle(name = \"독수리\", wingspan=2.3)\n",
+    "    print(my_eagle.fly())\n",
+    "    \n",
+    "def dogs_info():\n",
+    "    my_dog = mammals.Dog(name = \"바우\", breed=\"골든 리트리버\")\n",
+    "    print(my_dog.bark())\n",
+    "    \n",
+    "birds_info()\n",
+    "dogs_info()\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
