🚨 에러원인 확인하기위해 에러 상황 재현
에러 원인 분석용

--- a/day7/task_9.ipynb
+++ b/day7/task_9.ipynb
@@ -21,32 +21,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "독수리이(가) 날라다닙니다. 날개 길이는 2.3m 입니다.\n",
-      "바우 (골든 리트리버)이(가) 멍멍 짖습니다.\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named '__init__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01manimals\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbirds\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Eagle\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mbirds_eagle_info\u001b[39m():\n\u001b[1;32m      4\u001b[0m     eagle_info \u001b[38;5;241m=\u001b[39m Eagle(name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m독수리\u001b[39m\u001b[38;5;124m\"\u001b[39m, wingspan\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2.3\u001b[39m)\n",
+      "File \u001b[0;32m~/Desktop/oz/project/oz_python/oz_python_assignment/day7/animals/birds.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m__init__\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m InitAnimals\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mEagle\u001b[39;00m(InitAnimals):\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name, wingspan):\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named '__init__'"
      ]
     }
    ],
    "source": [
-    "from animals import birds, mammals\n",
+    "from animals.birds import Eagle\n",
     "\n",
-    "def birds_info():\n",
-    "    my_eagle = birds.Eagle(name = \"독수리\", wingspan=2.3)\n",
-    "    print(my_eagle.fly())\n",
-    "    \n",
-    "def dogs_info():\n",
-    "    my_dog = mammals.Dog(name = \"바우\", breed=\"골든 리트리버\")\n",
-    "    print(my_dog.bark())\n",
-    "    \n",
-    "birds_info()\n",
-    "dogs_info()\n",
-    "    "
+    "def birds_eagle_info():\n",
+    "    eagle_info = Eagle(name=\"독수리\", wingspan=2.3)\n",
+    "    print(eagle_info.getEagleName())  # 메서드 호출\n",
+    "\n",
+    "birds_eagle_info()"
    ]
   },
   {
