🌱 8일차 숙제 4, 6번 문제 제외하고 풀고 제출
8일차 숙제!!

--- a/day7/task_6.ipynb
+++ b/day7/task_6.ipynb
@@ -13,27 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Response [500]>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests as rq\n",
-    "from urllib import request\n",
-    "from bs4 import BeautifulSoup\n",
-    "import csv\n",
     "\n",
     "target = \"https://kream.co.kr/\"\n",
     "result = rq.get(target)\n",
-    "print(result)\n",
-    "\n"
+    "print(result)\n"
    ]
   },
   {
