🌱 6번 문제 풀고 제출
4번 문제 남음

--- a/day8/task_6.ipynb
+++ b/day8/task_6.ipynb
@@ -25,19 +25,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이 차량은 [현대]에서 제조한 [GV80]입니다. 그리고 적재량은 1000t입니다.\n",
+      "이 차량은 [벤츠]에서 제조한 [S200]입니다. 그리고 좌석수는 7입니다.\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "# 부모 클래스인 Vehicle 를 선언\n",
+    "class Vehicle:\n",
+    "    def __init__(self, make, model):\n",
+    "        self.make = make\n",
+    "        self.model = model\n",
+    "    \n",
+    "    def display_info(self):\n",
+    "        return f'이 차량은 [{self.make}]에서 제조한 [{self.model}]입니다.'\n",
+    "\n",
+    "# child 클래스인 Truck 를 선언\n",
+    "class Truck(Vehicle):\n",
+    "    def __init__(self, make, model, payload):\n",
+    "        super().__init__(make, model)\n",
+    "        self.payload = payload\n",
+    "        \n",
+    "    def display_info(self):\n",
+    "        return super().display_info()\n",
+    "    \n",
+    "# child 클래스인 Car 를 선언\n",
+    "class Car(Vehicle):\n",
+    "    def __init__(self, make, model, seats):\n",
+    "        super().__init__(make, model)\n",
+    "        self.seats = seats\n",
+    "        \n",
+    "    def display_info(self):\n",
+    "        return super().display_info()\n",
+    "\n",
+    "# 트럭에 대한 정보 함소\n",
+    "def truck_info():\n",
+    "    truck_vehicle_list = ['제조사','모델명','적재량']\n",
+    "\n",
+    "    # truck_vehicle_list 만큼 반복문을 돌리면서 입력값을 truck_vehicle_list의 해당 인덱스에 입력값 할당\n",
+    "    for i in range(0, len(truck_vehicle_list)):\n",
+    "        truck_vehicle_list[i] = input(f\"트럭의 {truck_vehicle_list[i]}을(를) 입력해주세요! : \")\n",
+    "    \n",
+    "    truck = Truck(make = truck_vehicle_list[0], model = truck_vehicle_list[1], payload = truck_vehicle_list[2])\n",
+    "\n",
+    "    print(truck.display_info() + f' 그리고 적재량은 {truck.payload}입니다.')\n",
+    "\n",
+    "# 자동차에 대한 정보 함수\n",
+    "def car_info():\n",
+    "    # car_vehicle_list 만큼 반복문을 돌리면서 입력값을 car_vehicle_list의 해당 인덱스에 입력값 할당\n",
+    "    car_vehicle_list = ['제조사','모델명','좌석수']\n",
+    "    for i in range(0, len(car_vehicle_list)):\n",
+    "        car_vehicle_list[i] = input(f\"승용차의 {car_vehicle_list[i]}을(를) 입력해주세요! : \")\n",
+    "\n",
+    "    car = Car(make = car_vehicle_list[0], model = car_vehicle_list[1], seats = car_vehicle_list[2])\n",
+    "    \n",
+    "    print(car.display_info() + f' 그리고 좌석수는 {car.seats}입니다.')\n",
+    "    \n",
+    "# 트럭과 승용차 정보 조회\n",
+    "truck_info()\n",
+    "car_info()\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
