🌱 8일차 숙제 완료
4번 문제 품

--- a/day8/task_4.ipynb
+++ b/day8/task_4.ipynb
@@ -18,18 +18,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "근영님의 인상된 급여는 1.2% 만큼 인상된 60000원이며, 우중님의 인상된 급여는 1.04% 만큼 인상된 52000원입니다.\n"
+     ]
+    }
+   ],
    "source": [
+    "\"\"\"\n",
+    "- raise_amount => 연봉인상률이며 기본값 1.04\n",
+    "- 다음 급여는 salary(기본급여) * raise_amount\n",
+    "\"\"\"\n",
     "class Employee:\n",
     "    raise_amount = 1.04\n",
     "    def __init__(self, name, salary):\n",
     "        self.name = name\n",
     "        self.salary = salary\n",
     "        \n",
-    "\"\"\"한 객체에만 'raise_amount'를 변경한 후, 두 객체의 급여를 증가시켜보세요.<br>\n",
-    "그리고 각 객체의 새로운 급여를 출력하세요. 여기 예시 한 번만 들어주실 수 없을까요???\"\"\""
+    "    # 급여인상률 적용\n",
+    "    def apply_raise(self):\n",
+    "        self.salary = int(self.salary * self.raise_amount)\n",
+    "    \n",
+    "# Employee 객체 생성    \n",
+    "emplyee1 = Employee(\"근영님\", 50000)\n",
+    "emplyee2 = Employee(\"우중님\", 50000)\n",
+    "\n",
+    "# 하나의 객체에만 월급 인상이 가능하기에 emplyee1 만 월급 인상률 인상\n",
+    "emplyee1.raise_amount = 1.20\n",
+    "\n",
+    "# 각 급여 인상률 계산 메서드\n",
+    "emplyee1.apply_raise()\n",
+    "emplyee2.apply_raise()\n",
+    "\n",
+    "print(f\"{emplyee1.name}의 인상된 급여는 {emplyee1.raise_amount}% 만큼 인상된 {emplyee1.salary}원이며, {emplyee2.name}의 인상된 급여는 {emplyee2.raise_amount}% 만큼 인상된 {emplyee2.salary}원입니다.\")"
    ]
   },
   {
@@ -50,7 +76,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.6"
   }
  },
