--- a/day7/task_6.ipynb
+++ b/day7/task_6.ipynb
@@ -13,9 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [500]>\n"
+     ]
+    }
+   ],
    "source": [
     "import requests as rq\n",
     "\n",
