🐛 7일차 숙제 오답 수정 후 제출
task_1, task_3, task_7 문제 해결

--- a/day7/task_1.ipynb
+++ b/day7/task_1.ipynb
@@ -32,11 +32,11 @@
     "def sum():\n",
     "    try:\n",
     "        nums_list = input(\"두 개의 숫자를 입력해주세요. : \").split(\",\") # 두 수를 받아 split() 으로 쪼개 리스트 형식으로 변환\n",
-    "        print(f\"두 수의 합은 {int(nums_list[0])//int(nums_list[1])}\")\n",
+    "        print(f\"두 입력한 수를 나누면 {int(nums_list[0])//int(nums_list[1])}입니다.\")\n",
     "    except ValueError as valueError:    # 출력에 쓰이는 값이 정확하지 않을 때 발생하는 예외\n",
     "        print(f\"값을 정확히 입력해주세요!!\\n값 : {nums_list}\\n에러 : {valueError}\")\n",
-    "    except ZeroDivisionError as zeroDivitionError:  # 나누는 수가 0일 때 발생하는 예외\n",
-    "        print(f\"나누는 수가 0이 되면 안되용!!\\n값{nums_list}\\n에러: {zeroDivitionError}\")\n",
+    "    except ZeroDivisionError as zeroDivisionError:  # 나누는 수가 0일 때 발생하는 예외\n",
+    "        print(f\"나누는 수가 0이 되면 안되용!!\\n값{nums_list}\\n에러: {zeroDivisionError}\")\n",
     "\n",
     "sum()\n",
     "        \n",
