--- a/day7/task_3.ipynb
+++ b/day7/task_3.ipynb
@@ -26,31 +26,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "잘못된 값: ㅁ.숫자를 입력해주세요.\n",
+      "잘못된 값: a.숫자를 입력해주세요.\n",
+      "잘못된 값: vb.숫자를 입력해주세요.\n",
+      "잘못된 값: a.숫자를 입력해주세요.\n",
       "잘못된 값: d.숫자를 입력해주세요.\n",
-      "잘못된 값: gh.숫자를 입력해주세요.\n",
-      "잘못된 값: c.숫자를 입력해주세요.\n",
-      "잘못된 값: z.숫자를 입력해주세요.\n",
-      "잘못된 값: asdf.숫자를 입력해주세요.\n",
-      "입력받아 리스트에 저장된 숫자는 [1, 3, 4, 5, 1203, 14, 5, 125]입니다.\n"
+      "저장하신 숫자는 1\n",
+      "저장하신 숫자는 35\n",
+      "저장하신 숫자는 425\n",
+      "저장하신 숫자는 25\n",
+      "잘못된 값: .숫자를 입력해주세요.\n",
+      "입력받아 리스트에 저장된 숫자는 [1, 35, 425, 25]입니다.\n"
      ]
     }
    ],
    "source": [
     "class values:\n",
     "    def __init__(self):\n",
-    "        self.check = \"\" # While 문을 빠져나올 수 있도록 하기 위해 선언\n",
     "        self.list = list()  # 입력 받은 숫자를 저장하는 리스트\n",
     "        \n",
     "    def value_input(self):\n",
-    "        while self.check != \"done\" :    # 유저가 done 을 입력했는지 확인\n",
+    "        while True :    # 유저가 done 을 입력했는지 확인\n",
     "            try:\n",
     "                input_num = input(\"숫자를 입력해주세요 : \")\n",
-    "                if input_num == \"done\": # done 을 입력했다면 self.check 에 done 문자열을 넣고, print 함수 호출\n",
+    "                if input_num == \"done\": # done 을 입력했다면 break\n",
     "                    self.check = input_num\n",
     "                    print(f\"입력받아 리스트에 저장된 숫자는 {self.list}입니다.\")\n",
+    "                    break\n",
     "                else:   # 조건문에 if else 문에 해당되지 않은 값을 받았을 때 예외\n",
     "                    self.list.append(int(input_num))\n",
+    "                    print(f\"저장하신 숫자는 {input_num}\")\n",
     "            except ValueError as valueError:\n",
     "                print(f\"잘못된 값: {input_num}.숫자를 입력해주세요.\")\n",
     "                \n",
@@ -61,7 +65,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
