--- a/day7/task_7.ipynb
+++ b/day7/task_7.ipynb
@@ -11,49 +11,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "두구두구두구~~~!!!\n",
-      "\n",
-      "함수 실행 시간: 1736496191.142153초 입니다!!\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 17\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;129m@timerDecorator\u001b[39m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mtimeCheck\u001b[39m():\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m함수 실행 시간: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtime\u001b[38;5;241m.\u001b[39mtime()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m초\u001b[39m\u001b[38;5;124m'\u001b[39m,end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 17\u001b[0m \u001b[43mtime\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
+      "함수 실행 시간: 1736844049.9898539초\n",
+      "입니다!!\n"
      ]
     }
    ],
    "source": [
     "import time\n",
     "\n",
-    "start = time.time()\n",
+    "start = float(time.time())\n",
     "\n",
     "def timerDecorator(function):\n",
-    "    print(\"\\n두구두구두구~~~!!!\\n\")\n",
-    "    \n",
     "    def wrapper():\n",
     "        function()\n",
     "        print(\"입니다!!\")\n",
-    "    return wrapper()\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    이전에는 return wrapper() 로 로직을 작성하여 메소드 호출결과를 리턴하는 방식으로 되다 보니까 콜백이 잘못 전달되는 이슈가 있었다.\n",
+    "    \n",
+    "    이슈 수정하기 위해 return wrapper 즉, 함수 객체를 리턴하는 방식으로 로직을 수정하여 이슈를 해결하였다.\n",
+    "    이렇게 되면 wrapper 함수가 리턴된 후 해당 함수를 실행하는 방식으로 된다.\n",
+    "    \"\"\"\n",
+    "    return wrapper\n",
     "\n",
     "@timerDecorator\n",
     "def timeCheck():\n",
-    "    print(f'함수 실행 시간: {time.time()}초',end=' ')\n",
+    "    print (f'함수 실행 시간: {start}초')\n",
     "\n",
-    "time()\n",
+    "timeCheck()\n",
     "    "
    ]
   },
@@ -65,7 +57,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
