🐛 6일차 숙제 오답
오답이라기 보다 코드 개선

--- a/day6/Ch23_task.ipynb
+++ b/day6/Ch23_task.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "사용자는 익명입니다.\n"
+      "사용자는 wjdrmsdud입니다.\n"
      ]
     }
    ],
@@ -24,7 +24,7 @@
     "def print_name(name = \"익명\"):\n",
     "    return name\n",
     "\n",
-    "name = input(\"사용자의 이름을 입력해주세요 : \").strip() # 혹시 모르니 앞뒤 공백 제거\n",
+    "name = input(\"사용자의 이름을 입력해주세요 : \").strip().replace(\" \",\"\") # 혹시 모르니 앞뒤 공백 제거 및 replace 메서드를 이용해서 사이 공백 제거!\n",
     "\n",
     "# input() 함수로 입력하지 않고 enter 하면 \"\" 이라는 문자열이 생성하여 다음과 같이 조건문 작성\n",
     "if name == \"\":\n",
@@ -41,7 +41,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
