--- a/day6/Ch32_task.ipynb
+++ b/day6/Ch32_task.ipynb
@@ -9,21 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "두 문자열은 각각 감자냐와 고구마냐이며,\n",
-      "승자는 고구마냐입니다.\n"
+      "두 문자열은 각각 '두 문자열은 각각 왜 ==과 > 를 따로 썼을까요.....'와  '그냥 >= 라고 비교연산자를 바꾸면 간략해 질것을!!!!'이며,\n",
+      "승자는 '두 문자열은 각각 왜 ==과 > 를 따로 썼을까요.....'입니다.\n"
      ]
     }
    ],
    "source": [
     "def longer_string(*input_values):\n",
-    "    if len(input_values[0]) == len(input_values[1]) or len(input_values[0]) > len(input_values[1]):\n",
+    "    if len(input_values[0]) >= len(input_values[1]):\n",
     "        print(f\"두 문자열은 각각 {input_values[0]}와 {input_values[1]}이며,\\n승자는 {input_values[0]}입니다.\")\n",
     "    else:\n",
     "        print(f\"두 문자열은 각각 {input_values[0]}와 {input_values[1]}이며,\\n승자는 {input_values[1]}입니다.\")\n",
@@ -35,7 +35,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
