--- a/day4/Chaper1416_task.ipynb
+++ b/day4/Chaper1416_task.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "id": "2NmqRFgDvFtz"
    },
@@ -184,27 +184,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "영숫자 필터기: 9876543210\n"
+      "77341\n"
      ]
     }
    ],
    "source": [
-    "s = input(\"숫자를 입력해주세요.(소문자 영어 숫자 지원!!!): \")\n",
-    "filter_num = ''\n",
-    "en_num = ['zero','one','two','three','four','five','six','seven','eight','nine']\n",
+    "# s = input(\"숫자를 입력해주세요.(소문자 영어 숫자 지원!!!): \")   # 1zerothreefourone\n",
+    "# filter_num = '' # 1 0\n",
+    "# en_num = ['zero','one','two','three','four','five','six','seven','eight','nine']\n",
     "\n",
-    "num = ''    # 문자가 나올 때마다 num에 넣어 en_num 리스트 안에 값을 찾는용으로 선언\n",
+    "# num = ''    # 문자가 나올 때마다 num에 넣어 en_num 리스트 안에 값을 찾는용으로 선언\n",
     "\n",
-    "for i in range(0, len(s)):  # 입력값의 길이 만큼 반복문을 돌려 문자 하나하나를 체크하려고 선언\n",
-    "    if s[i].isdigit():  # 해당 문자가 숫자인지 확인\n",
-    "        filter_num += s[i]  # 숫자이면 결과물로 출력해야 될 filter_num에 추가!\n",
-    "    else:   # 문자일 경우\n",
-    "        num += s[i] # num 안에 문자 추가!\n",
-    "        if num in en_num:   # en_num 리스트 안에 num 이 있는지 확인 (있다면: True, 없다면: False)\n",
-    "            filter_num += str(en_num.index(num))    # en_num 리스트 안에 num이 있다면 filter_num에 추가!\n",
-    "            num = ''    #결과값으로 출력할 filter_num에 추가했으니 다시 초기화!\n",
+    "# for i in range(0, len(s)):  # 입력값의 길이 만큼 반복문을 돌려 문자 하나하나를 체크하려고 선언\n",
+    "#     if s[i].isdigit():  # 해당 문자가 숫자인지 확인  Boolean\n",
+    "#         filter_num += s[i]  # 숫자이면 결과물로 출력해야 될 filter_num에 추가!\n",
+    "#     else:   # 문자일 경우\n",
+    "#         num += s[i] # num 안에 문자 추가!   num = \"zero\"\n",
+    "#         if num in en_num:   # en_num 리스트 안에 num 이 있는지 확인 (있다면: True, 없다면: False)\n",
+    "#             filter_num += str(en_num.index(num))    # en_num 리스트 안에 num이 있다면 filter_num에 추가!\n",
+    "#             num = ''    #결과값으로 출력할 filter_num에 추가했으니 다시 초기화!\n",
     "\n",
-    "print(f'영숫자 필터기: {filter_num}')\n"
+    "# print(f'영숫자 필터기: {filter_num}')\n",
+    "\n",
+    "nums = {'zero':'0', 'one':'1', 'two':'2', 'three':'3', 'four':'4', 'five':'5', 'six':'6', 'seven':'7', 'eight':'8', 'nine':'9'}\n",
+    "\n",
+    "for i in nums:\n",
+    "    s = s.replace(i,nums[i])\n",
+    "print(s)\n",
+    "\n",
+    "# s = \"nine77three4onethreefoursix555\"\n",
+    "# for i in nums:\n",
+    "#     s = s.replace(i,nums[i])\n",
+    "# print(s)\n",
+    "\n",
+    "# 사용 가능\n",
+    "# 문자형 숫자로 구분분\n",
+    "# char.isdigit()  #문자형 숫자인지\n",
+    "# '0' <= char <= '9'  #실제로는 ASCII코드로 비교\n",
+    "# 48 <= ord(char) <= 57  #ASCII코드로 비교\n",
+    "# re.match(r'[0-9]', char)  #정규식 이용\n"
    ]
   },
   {
@@ -420,7 +438,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -433,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
